--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
     "cSpell.language": "en-GB",
-    "cSpell.ignoreWords": ["Semcn", "Fixsc", "Epslr", "Affin"]
+    "cSpell.ignoreWords": ["Semcn", "Fixsc", "Epslr", "Affin", "dialog", "Centered", "operatorname", "Erfc", "erfc", "Delaunay"]
 }
