updating the text and fixing spelling errors

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "cSpell.language": "en-GB",
-    "cSpell.ignoreWords": ["Semcn", "Fixsc", "Epslr", "Affin", "dialog", "operatorname", "Erfc", "erfc", "Delaunay"]
+    "cSpell.ignoreWords": 
+    ["Semcn", "Fixsc", "Epslr", "Affin", "dialog", "operatorname", "Erfc", "erfc", "Delaunay", "TCAD", "mathbf"]
 }
